# zapier-app-insights

./: README.md
api/: .env.example  .envrc  .gitignore  Makefile  README.md  flake.nix  pyproject.toml
api/src/zapier_insights/: __init__.py  config.py  database.py  main.py  models.py
api/src/zapier_insights/routers/: __init__.py  health.py  insights.py
api/tests/: __init__.py  test_health.py
docs/: DATA_MODEL.md
notebooks/: app-insights.py
pipelines/: README.md  dlt_pipeline.py  pipeline_config.json
